Enable inputs, start working on sidenav

--- a/src/app/navigation/topnav/topnav.component.html
+++ b/src/app/navigation/topnav/topnav.component.html
@@ -6,7 +6,7 @@
   <div class="topnav__search__wrapper">
     <mat-icon class="topnav__search__icon">search</mat-icon>
     <div class="topnav__search__container">
-      <mat-input-container id="topnav-search search-visible" [floatPlaceholder]="false" class="topnav-search-input">
+      <mat-input-container id="topnav-search search-visible" [floatLabel]="'never'" class="topnav-search-input">
         <input
           #searchField
           matInput
