--- a/src/app/pages/bills-page/bill-index/invoice-table/invoice-table.component.html
+++ b/src/app/pages/bills-page/bill-index/invoice-table/invoice-table.component.html
@@ -40,7 +40,7 @@
         <td>
           <mat-icon [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
           <mat-menu #actionsMenu="matMenu" x-position="before">
-            <button md-menu-item (click)="view.emit(entity)">{{'ACCOUNT_BILLING_VIEW' | translate}}</button>
+            <button mat-menu-item (click)="view.emit(entity)">{{'ACCOUNT_BILLING_VIEW' | translate}}</button>
           </mat-menu>
         </td>
       </tr>
