--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
@@ -121,9 +121,9 @@
             <div class="text">{{s.product.name}}</div>
             <mat-icon [matMenuTriggerFor]="scheduleoptions">more_vert</mat-icon>
             <mat-menu #scheduleoptions="matMenu" x-position="before">
-              <button md-menu-item [routerLink]="['/products', s.product.id]">View Product</button>
-              <button md-menu-item (click)="deleteSchedule.emit(s)">Delete Schedule</button>
-              <button md-menu-item (click)="focusSchedule.emit(s)">Focus Schedule</button>
+              <button mat-menu-item [routerLink]="['/products', s.product.id]">View Product</button>
+              <button mat-menu-item (click)="deleteSchedule.emit(s)">Delete Schedule</button>
+              <button mat-menu-item (click)="focusSchedule.emit(s)">Focus Schedule</button>
             </mat-menu>
           </div>
 
