--- a/src/app/pages/shipping-receipts-page/shipping-receipts-view/shipping-receipt-view.component.html
+++ b/src/app/pages/shipping-receipts-page/shipping-receipts-view/shipping-receipt-view.component.html
@@ -29,7 +29,7 @@
             <div class="entity-view__card__header__title">{{'SHIPPINGRECEIPT_INFO_TITLE' | translate}}</div>
             <mat-icon [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
             <mat-menu #actionsMenu="matMenu" x-position="before">
-              <button md-menu-item (click)="goToFulfillmentProvider()">{{'SHIPPINGRECEIPT_INFO_FULFILLMENTPROVIDERVIEW' | translate}}</button>
+              <button mat-menu-item (click)="goToFulfillmentProvider()">{{'SHIPPINGRECEIPT_INFO_FULFILLMENTPROVIDERVIEW' | translate}}</button>
             </mat-menu>
           </div>
 
