--- a/src/app/navigation/topnav/topnav-dropdown/topnav-dropdown.component.scss
+++ b/src/app/navigation/topnav/topnav-dropdown/topnav-dropdown.component.scss
@@ -12,6 +12,11 @@
     &--small {
       height: 20px;
       width: 20px;
+
+      div {
+        height: 20px;
+        line-height: 20px;
+      }
     }
 
     mat-icon {
