--- a/src/app/pages/accounts-page/account-view/account-add-new/account-add-new.component.html
+++ b/src/app/pages/accounts-page/account-view/account-add-new/account-add-new.component.html
@@ -4,8 +4,8 @@
     <ng-container *ngIf="mode === modes.View && editEnabled">
       <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
       <mat-menu #editOptions="matMenu" x-position="before">
-        <button md-menu-item (click)="changeMode.emit(modes.Update)">{{ 'ACCOUNT_DETAILS_EDIT' | translate}}</button>
-        <button *ngIf="actingAsEnabled" md-menu-item (click)="actAs.emit(true)">{{ 'ACCOUNT_ACTAS' | translate}}</button>
+        <button mat-menu-item (click)="changeMode.emit(modes.Update)">{{ 'ACCOUNT_DETAILS_EDIT' | translate}}</button>
+        <button *ngIf="actingAsEnabled" mat-menu-item (click)="actAs.emit(true)">{{ 'ACCOUNT_ACTAS' | translate}}</button>
       </mat-menu>
     </ng-container>
   </div>
