--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-campaigns/affiliate-campaigns.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-campaigns/affiliate-campaigns.component.html
@@ -39,7 +39,7 @@
       <td>
         <button mat-icon-button [matMenuTriggerFor]="actionsMenu"><mat-icon>more_vert</mat-icon></button>
         <mat-menu #actionsMenu="matMenu" x-position="before">
-          <button md-menu-item [routerLink]="['/campaigns', entity.id]">{{'AFFILIATE_CAMPAIGN_VIEW' | translate}}</button>
+          <button mat-menu-item [routerLink]="['/campaigns', entity.id]">{{'AFFILIATE_CAMPAIGN_VIEW' | translate}}</button>
         </mat-menu>
       </td>
     </tr>
