--- a/src/app/pages/components/table-actions/table-actions.component.html
+++ b/src/app/pages/components/table-actions/table-actions.component.html
@@ -4,12 +4,12 @@
   <ng-container *ngIf="!dedicatedOptions || showCopy">
     <button mat-icon-button [matMenuTriggerFor]="actionsMenu"><mat-icon>more_vert</mat-icon></button>
     <mat-menu #actionsMenu="matMenu" x-position="before">
-      <button *ngIf="!dedicatedOptions && showView" md-menu-item (click)="viewClicked.emit(true)">{{'INDEXPAGE_VIEW' | translate}}</button>
-      <button *ngIf="!dedicatedOptions && showEdit" md-menu-item (click)="editClicked.emit(true)">{{'INDEXPAGE_EDIT' | translate}}</button>
-      <button *ngIf="!dedicatedOptions && showDelete" md-menu-item (click)="deleteClicked.emit(true)">{{'INDEXPAGE_DEL' | translate}}</button>
-      <button *ngIf="showCopy" md-menu-item (click)="copyClicked.emit(true)">{{'INDEXPAGE_COPY' | translate}}</button>
-      <button *ngIf="showExport" md-menu-item (click)="exportClicked.emit(true)">{{'INDEXPAGE_EXP' | translate}}</button>
-      <button *ngIf="customText" md-menu-item (click)="customClicked.emit(true)">{{customText | translate}}</button>
+      <button *ngIf="!dedicatedOptions && showView" mat-menu-item (click)="viewClicked.emit(true)">{{'INDEXPAGE_VIEW' | translate}}</button>
+      <button *ngIf="!dedicatedOptions && showEdit" mat-menu-item (click)="editClicked.emit(true)">{{'INDEXPAGE_EDIT' | translate}}</button>
+      <button *ngIf="!dedicatedOptions && showDelete" mat-menu-item (click)="deleteClicked.emit(true)">{{'INDEXPAGE_DEL' | translate}}</button>
+      <button *ngIf="showCopy" mat-menu-item (click)="copyClicked.emit(true)">{{'INDEXPAGE_COPY' | translate}}</button>
+      <button *ngIf="showExport" mat-menu-item (click)="exportClicked.emit(true)">{{'INDEXPAGE_EXP' | translate}}</button>
+      <button *ngIf="customText" mat-menu-item (click)="customClicked.emit(true)">{{customText | translate}}</button>
     </mat-menu>
   </ng-container>
 </div>
