--- a/src/app/pages/customers-page/customer-view/customer-notes/customer-notes.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-notes/customer-notes.component.html
@@ -5,7 +5,7 @@
 
     <mat-icon [matMenuTriggerFor]="creditCardOptions">more_vert</mat-icon>
     <mat-menu #creditCardOptions="matMenu" x-position="before">
-      <button md-menu-item (click)="newNote()">{{'CUSTOMER_NOTES_ADD' | translate}}</button>
+      <button mat-menu-item (click)="newNote()">{{'CUSTOMER_NOTES_ADD' | translate}}</button>
     </mat-menu>
   </mat-card-title>
   <mat-card-content>
@@ -41,7 +41,7 @@
           <mat-icon class="note__content__action" [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
 
           <mat-menu #actionsMenu="matMenu" x-position="before">
-            <button md-menu-item (click)="deleteEntity(n.id)">{{'CUSTOMER_NOTES_DEL' | translate}}</button>
+            <button mat-menu-item (click)="deleteEntity(n.id)">{{'CUSTOMER_NOTES_DEL' | translate}}</button>
           </mat-menu>
         </div>
       </div>
