--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -10,8 +10,8 @@
     <ng-container *ngIf="mode !== modes.Add && editEnabled">
       <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
       <mat-menu #editOptions="matMenu" x-position="before">
-        <button md-menu-item (click)="changeMode.emit(modes.Update)">{{'EMAILTEMPLATE_INFO_EDIT' | translate}}</button>
-        <button md-menu-item *ngIf="entity.smtpProvider && entity.smtpProvider.id" [routerLink]="['/smtpproviders', entity.smtpProvider.id]">{{'EMAILTEMPLATE_INFO_VIEWSMTPPROVIDER' | translate}}</button>
+        <button mat-menu-item (click)="changeMode.emit(modes.Update)">{{'EMAILTEMPLATE_INFO_EDIT' | translate}}</button>
+        <button mat-menu-item *ngIf="entity.smtpProvider && entity.smtpProvider.id" [routerLink]="['/smtpproviders', entity.smtpProvider.id]">{{'EMAILTEMPLATE_INFO_VIEWSMTPPROVIDER' | translate}}</button>
       </mat-menu>
     </ng-container>
   </div>
