--- a/src/app/pages/event-hooks-page/event-hook-view/event-hook-add-new/event-hook-add-new.component.html
+++ b/src/app/pages/event-hooks-page/event-hook-view/event-hook-add-new/event-hook-add-new.component.html
@@ -4,7 +4,7 @@
     <ng-container *ngIf="mode !== modes.Add">
       <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
       <mat-menu #editOptions="matMenu" x-position="before">
-        <button *ngIf="mode !== modes.Add" md-menu-item (click)="changeMode.emit(modes.Update)">{{'EVENTHOOK_INFO_EDIT' | translate}}</button>
+        <button *ngIf="mode !== modes.Add" mat-menu-item (click)="changeMode.emit(modes.Update)">{{'EVENTHOOK_INFO_EDIT' | translate}}</button>
       </mat-menu>
     </ng-container>
 
