--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-add-new/product-schedule-add-new.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-add-new/product-schedule-add-new.component.html
@@ -4,8 +4,8 @@
     <ng-container *ngIf="mode === view">
       <mat-icon [matMenuTriggerFor]="shipOptions">more_vert</mat-icon>
       <mat-menu #shipOptions="matMenu" x-position="before">
-        <button md-menu-item (click)="changeMode.emit(update);">{{'PRODUCTSCHEDULE_INFO_EDIT' | translate}}</button>
-        <button *ngIf="entity.merchantProviderGroup && entity.merchantProviderGroup.id" md-menu-item [routerLink]="['/merchantprovidergroups', entity.merchantProviderGroup.id]">{{'PRODUCTSCHEDULE_INFO_VIEWMERCHANTPROVIDERGROUP' | translate}}</button>
+        <button mat-menu-item (click)="changeMode.emit(update);">{{'PRODUCTSCHEDULE_INFO_EDIT' | translate}}</button>
+        <button *ngIf="entity.merchantProviderGroup && entity.merchantProviderGroup.id" mat-menu-item [routerLink]="['/merchantprovidergroups', entity.merchantProviderGroup.id]">{{'PRODUCTSCHEDULE_INFO_VIEWMERCHANTPROVIDERGROUP' | translate}}</button>
       </mat-menu>
     </ng-container>
   </div>
