--- a/src/app/pages/products-page/product-view/product-campaigns/product-campaigns.component.html
+++ b/src/app/pages/products-page/product-view/product-campaigns/product-campaigns.component.html
@@ -42,7 +42,7 @@
       <td>
         <mat-icon [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
         <mat-menu #actionsMenu="matMenu" x-position="before">
-          <button md-menu-item [routerLink]="['/campaigns', entity.id]">{{'PRODUCT_CAMPAIGN_VIEW' | translate}}</button>
+          <button mat-menu-item [routerLink]="['/campaigns', entity.id]">{{'PRODUCT_CAMPAIGN_VIEW' | translate}}</button>
         </mat-menu>
       </td>
     </tr>
