--- a/src/app/pages/products-page/product-view/product-product-schedules/product-product-schedules.component.html
+++ b/src/app/pages/products-page/product-view/product-product-schedules/product-product-schedules.component.html
@@ -19,7 +19,7 @@
     </table-preferences>
     <mat-icon class="entity-view__table-component__header__action" [matMenuTriggerFor]="optionsMenu">more_vert</mat-icon>
     <mat-menu #optionsMenu="matMenu" x-position="before">
-      <button md-menu-item (click)="showAddProductScheduleModal()">{{'PRODUCT_SCHEDULES_ADD' | translate}}</button>
+      <button mat-menu-item (click)="showAddProductScheduleModal()">{{'PRODUCT_SCHEDULES_ADD' | translate}}</button>
     </mat-menu>
   </div>
   <table class="highlight table__custom">
@@ -50,8 +50,8 @@
       <td>
         <mat-icon [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
         <mat-menu #actionsMenu="matMenu" x-position="before">
-          <button md-menu-item [routerLink]="['/productschedules', entity.id]">{{'PRODUCT_SCHEDULES_VIEW' | translate}}</button>
-          <button md-menu-item (click)="removeProductSchedule(entity)">{{'PRODUCT_SCHEDULES_REMOVE' | translate}}</button>
+          <button mat-menu-item [routerLink]="['/productschedules', entity.id]">{{'PRODUCT_SCHEDULES_VIEW' | translate}}</button>
+          <button mat-menu-item (click)="removeProductSchedule(entity)">{{'PRODUCT_SCHEDULES_REMOVE' | translate}}</button>
         </mat-menu>
       </td>
     </tr>
