--- a/src/app/pages/profile-page/user-signing-strings/user-signing-strings.component.html
+++ b/src/app/pages/profile-page/user-signing-strings/user-signing-strings.component.html
@@ -17,7 +17,7 @@
     </table-pagination>
     <mat-icon [matMenuTriggerFor]="optionsMenu" class="entity-view__table-component__header__action">more_vert</mat-icon>
     <mat-menu #optionsMenu="matMenu" x-position="before">
-      <button md-menu-item (click)="addOrUpdateSigningString()">{{ 'PROFILE_SIGNINGSTRINGS_ADD' | translate}}</button>
+      <button mat-menu-item (click)="addOrUpdateSigningString()">{{ 'PROFILE_SIGNINGSTRINGS_ADD' | translate}}</button>
     </mat-menu>
   </div>
   <table class="highlight table__custom">
@@ -40,8 +40,8 @@
       <td>
         <mat-icon [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
         <mat-menu #actionsMenu="matMenu" x-position="before">
-          <button md-menu-item (click)="addOrUpdateSigningString(entity)">{{ 'PROFILE_SIGNINGSTRINGS_EDIT' | translate}}</button>
-          <button md-menu-item (click)="deleteEntity(entity.id)">{{ 'PROFILE_SIGNINGSTRINGS_REMOVE' | translate}}</button>
+          <button mat-menu-item (click)="addOrUpdateSigningString(entity)">{{ 'PROFILE_SIGNINGSTRINGS_EDIT' | translate}}</button>
+          <button mat-menu-item (click)="deleteEntity(entity.id)">{{ 'PROFILE_SIGNINGSTRINGS_REMOVE' | translate}}</button>
         </mat-menu>
       </td>
     </tr>
