--- a/src/app/pages/smtp-providers-page/smtp-provider-email-templates/smtp-provider-email-templates.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-email-templates/smtp-provider-email-templates.component.html
@@ -39,7 +39,7 @@
       <td>
         <mat-icon [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
         <mat-menu #actionsMenu="matMenu" x-position="before">
-          <button md-menu-item [routerLink]="['/emailtemplates', entity.id]">{{'SMTP_EMAILTEMPLATE_VIEW' | translate}}</button>
+          <button mat-menu-item [routerLink]="['/emailtemplates', entity.id]">{{'SMTP_EMAILTEMPLATE_VIEW' | translate}}</button>
         </mat-menu>
       </td>
     </tr>
