--- a/src/app/shared/components/advanced-filter/advanced-filter.component.html
+++ b/src/app/shared/components/advanced-filter/advanced-filter.component.html
@@ -52,7 +52,7 @@
         <share-link [shareUrl]="shareUrl"></share-link>
         <mat-icon [matMenuTriggerFor]="advancedOptions">more_vert</mat-icon>
         <mat-menu #advancedOptions="matMenu" x-position="before">
-          <button md-menu-item (click)="toggleAdvanced()"> {{(advanced ? 'ADVANCEDFILTER_HIDE' : 'ADVANCEDFILTER_SHOW') | translate}} </button>
+          <button mat-menu-item (click)="toggleAdvanced()"> {{(advanced ? 'ADVANCEDFILTER_HIDE' : 'ADVANCEDFILTER_SHOW') | translate}} </button>
         </mat-menu>
       </div>
     </ng-container>
@@ -107,7 +107,7 @@
             </span>
           </div>
           <mat-menu #transactionTypeMenu="matMenu" x-position="after">
-            <button md-menu-item *ngFor="let tt of transactionTypes" (click)="addFilterTerm(tt)"> {{tt.label | translate}} </button>
+            <button mat-menu-item *ngFor="let tt of transactionTypes" (click)="addFilterTerm(tt)"> {{tt.label | translate}} </button>
           </mat-menu>
 
           <div class="advanced-filter__advanced__dropdown">
@@ -117,7 +117,7 @@
             </span>
           </div>
           <mat-menu #processorResultMenu="matMenu" x-position="after">
-            <button md-menu-item *ngFor="let pr of processorResponses" (click)="addFilterTerm(pr)"> {{pr.label | translate}} </button>
+            <button mat-menu-item *ngFor="let pr of processorResponses" (click)="addFilterTerm(pr)"> {{pr.label | translate}} </button>
           </mat-menu>
         </div>
       </div>
