--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,10 @@
-@import '../../../node_modules/@angular/material/core/theming/all-theme';
+@import '~@angular/material/theming';
 
-@include md-core();
+@include mat-core();
 
-$primary-palette: md-palette($md-blue, 700, 400, 900);
-$accent-palette: md-palette($md-deep-orange);
-$core-theme: md-light-theme($primary-palette, $accent-palette);
+$primary-palette: mat-palette($mat-blue, 700, 400, 900);
+$accent-palette: mat-palette($mat-deep-orange);
+$core-theme: mat-light-theme($primary-palette, $accent-palette);
 
 @include angular-material-theme($core-theme);
 
